Delete unused images and update styles.css and index.html files

--- a/Smart-Cart/index.html
+++ b/Smart-Cart/index.html
@@ -21,47 +21,11 @@
 </head>
 </head>
 
-<body>
+<body background="banner.jpg">
 
     <div class="child">
         <nav>
-            <!-- <div>
-                    <a href="#" class="nlink"> <img id="logo" src="logo.png" alt="logo"></a>
-                </div>
 
-                <ul>
-                    <a href="#" class="nlink"></a>
-                    <li>Home</li></a>
-                    <a href="#" class="nlink"></a>
-                    <li>Product</li></a>
-                    <a href="#" class="nlink"></a>
-                    <li>About</li></a>
-                    <a href="#" class="nlink"></a>
-                    <li>Contact</li></a>
-                    <a href="#" class="nlink"></a>
-                    <li>Add to Cart</li></a>
-                </ul>
-                <div class="search-container">
-
-                    <form action="/" class="nlink">
-                        <input type="text" placeholder="Search.." name="search">
-                        <button type="submit">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-search" viewBox="0 0 16 16">
-                                <path
-                                    d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
-                            </svg>
-                        </button>
-                    </form>
-
-                </div>
-                <div class="account-options">
-                    <a href="./Login-Form/index.html" class="nlink">Login</a>
-                    <a href="./Sign-Up-From/index.html" class="nlink">Register</a>
-                </div>
-                <div>
-                    <a href="#" class="nlink"> <img id="bar" src="dropdown.png" alt="menu bar"></a>
-                </div> -->
             <nav class="navbar navbar-expand-lg bg-body-black">
                 <div class="container-fluid">
                     <a href="#" class="nlink"> <img id="logo" src="logo.png" alt="logo"></a>
@@ -90,7 +54,8 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Add to Cart</a>
+                                <a class="nav-link active" aria-current="page" href="./Product-Page/index.html">Add to
+                                    Cart</a>
 
                             </li>
 
@@ -108,10 +73,10 @@
                             </li>
 
                         </ul>
-                        <!-- <form class="d-flex" role="search">
+                        <form class="d-flex" role="search">
                             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                             <button class="btn btn-outline-success" type="submit">Search</button>
-                        </form> -->
+                        </form>
                     </div>
                 </div>
             </nav>
@@ -120,22 +85,7 @@
             <div id="leftportion">
                 <span id="title">Smart-Cart...where dreams become reality</span>
                 <span id="text">Let's be vocal for Local</span>
-                <!-- <div id="choose-card">
-                        <span>Choose Your</span>
-                        <div>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#2a4e45"
-                                class="bi bi-chevron-down" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd"
-                                    d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708" />
-                            </svg>
-                            <span>2</span>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#2a4e45"
-                                class="bi bi-chevron-up" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd"
-                                    d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708z" />
-                            </svg>
-                        </div> -->
-                <!-- </div> -->
+
                 <button>
                     <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="#F7EDE2" class="bi bi-cart3"
                         viewBox="0 0 16 16">
@@ -152,131 +102,8 @@
                 </figure>
             </div>
         </div>
-        <!-- <div class="bottom">
-                <a>Follow us on</a>
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-                    <path
-                        d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z" />
-                </svg>
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                    <path
-                        d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z" />
-                </svg> -->
 
     </div>
-    <div class="products" id="jjk">
-        <div class="gallery">
-            <div class="content">
-                <img src="./images_for_products/galaxys21.png" alt="galaxys21">
-                <h3>Samsung Galaxy S21 5G</h3>
-                <h6>Rs.29,999</h6>
-                <ul>
-                    <li><i class="fa fa-star checked"></i></li>
-                    <li><i class="fa fa-star checked"></i></li>
-                    <li><i class="fa fa-star checked"></i></li>
-                    <li><i class="fa fa-star checked"></i></li>
-                    <li><i class="fa fa-star"></i></li>
-                </ul>
-                <button class="buy">Buy Now</button>
-            </div>
-            <div class="content">
-                <img src="./images_for_products/redminote13pro.png" alt="redminote13pro">
-                <h3>Redmi note 13 Pro 5G mobile</h3>
-                <h6>Rs.25,999</h6>
-                <ul>
-                    <li><i class="fa fa-star checked"></i></li>
-                    <li><i class="fa fa-star checked"></i></li>
-                    <li><i class="fa fa-star checked"></i></li>
-                    <li><i class="fa fa-star checked"></i></li>
-                    <li><i class="fa fa-star"></i></li>
-                </ul>
-                <button class="buy">Buy Now</button>
-            </div>
-            <div class="content">
-                <img src="./images_for_products/iphone15.png" alt="iphone15">
-                <h3>Apple Iphone 15 Mobile</h3>
-                <h6>Rs.72,999</h6>
-                <ul>
-                    <li><i class="fa fa-star checked"></i></li>
-                    <li><i class="fa fa-star checked"></i></li>
-                    <li><i class="fa fa-star checked"></i></li>
-                    <li><i class="fa fa-star checked"></i></li>
-                    <li><i class="fa fa-star checked"></i></li>
-                </ul>
-                <button class="buy">Buy Now</button>
-            </div>
-            <div class="content">
-                <img src="./images_for_products/dell.png" alt="Dell">
-                <h3>DELL Intel Core i5 12gen 1235U</h3>
-                <h6>Rs.44,990</h6>
-                <ul>
-                    <li><i class="fa fa-star checked"></i></li>
-                    <li><i class="fa fa-star checked"></i></li>
-                    <li><i class="fa fa-star checked"></i></li>
-                    <li><i class="fa fa-star"></i></li>
-                    <li><i class="fa fa-star"></i></li>
-                </ul>
-                <button class="buy">Buy Now</button>
-            </div>
-            <div class="content">
-                <img src="./images_for_products/hpvictus.png" alt="hpvictus">
-                <h3>HP Victus AMD Ryzen 5 5600H</h3>
-                <h6>Rs.60,990</h6>
-                <ul>
-                    <li><i class="fa fa-star checked"></i></li>
-                    <li><i class="fa fa-star checked"></i></li>
-                    <li><i class="fa fa-star checked"></i></li>
-                    <li><i class="fa fa-star checked"></i></li>
-                    <li><i class="fa fa-star"></i></li>
-                </ul>
-                <button class="buy">Buy Now</button>
-            </div>
-            <div class="content">
-                <img src="./images_for_products/adidas.png" alt="adidas">
-                <h3>Adidas Fleecewalk Shoes</h3>
-                <h6>Rs.1,568</h6>
-                <ul>
-                    <li><i class="fa fa-star checked"></i></li>
-                    <li><i class="fa fa-star checked"></i></li>
-                    <li><i class="fa fa-star checked"></i></li>
-                    <li><i class="fa fa-star"></i></li>
-                    <li><i class="fa fa-star"></i></li>
-                </ul>
-                <button class="buy">Buy Now</button>
-            </div>
-            <div class="content">
-                <img src="./images_for_products/madame.png" alt="madame">
-                <h3>MADAME A-line Purple Dress</h3>
-                <h6>Rs.2,399</h6>
-                <ul>
-                    <li><i class="fa fa-star checked"></i></li>
-                    <li><i class="fa fa-star checked"></i></li>
-                    <li><i class="fa fa-star checked"></i></li>
-                    <li><i class="fa fa-star checked"></i></li>
-                    <li><i class="fa fa-star"></i></li>
-                </ul>
-                <button class="buy">Buy Now</button>
-            </div>
-            <div class="content">
-                <img src="./images_for_products/gucci.png" alt="gucci">
-                <h3>Luxify Gucci flora Perfume</h3>
-                <h6>Rs.1,499</h6>
-                <ul>
-                    <li><i class="fa fa-star checked"></i></li>
-                    <li><i class="fa fa-star checked"></i></li>
-                    <li><i class="fa fa-star checked"></i></li>
-                    <li><i class="fa fa-star checked"></i></li>
-                    <li><i class="fa fa-star checked"></i></li>
-                </ul>
-                <button class="buy">Buy Now</button>
-            </div>
-            <button id="btn">See More Products</button>
-        </div>
-        <a href="./Product-Page/index.html"><button type="button" id="out_btn"
-                class="btn btn-warning rounded-circle">Load-More-Products</button></a>
-    </div>
-    </div>
-
 
 
     <!--  Gsap is needed for Basic Effects -->
@@ -299,7 +126,7 @@
         crossorigin="anonymous"></script>
 
     <script src="script.js"></script>
-    <script src="prod_script.js"></script>
+
 
 </body>
 
