--- a/Smart-Cart/Contact-Page/index.html
+++ b/Smart-Cart/Contact-Page/index.html
@@ -17,16 +17,16 @@
         <p>Feel free to reach out us about anything we can do!</p>
         <form class="contact-form" action="#" method="post" onsubmit="redirectToOtherPage(); return false;">
             <div class="input-area">
-                <input type="text" placeholder="Your name" />
+                <input type="text" placeholder="Your name" required />
             </div>
             <div class="input-area">
-                <input type="email" placeholder="Email address" />
+                <input type="email" placeholder="Email address" required />
             </div>
             <div class="input-area">
-                <input type="text" placeholder="Subject" />
+                <input type="text" placeholder="Subject" required />
             </div>
             <div class="input-area h-80">
-                <textarea placeholder="Your message"></textarea>
+                <textarea placeholder="Your message" required></textarea>
             </div>
             <button class="sendbtn" type="submit">Send</button>
         </form>
